# pyldapsearch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
pyldapsearch/: __main__.py
