[tool.poetry]
name = "pyldapsearch"
version = "0.1.1"
description = "Tool for issuing manual LDAP queries which offers bofhound compatible output"
authors = [
    "Matt Creel",
    "Adam Brown"
]
readme = "README.md"
homepage = "https://github.com/fortalice/pyldapsearch"
repository = "https://github.com/fortalice/pyldapsearch"
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.9"
pyasn1 = "^0.4.8"
typer = "^0.4.1"
impacket = "^0.10.0"
ldap3 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyldapsearch = "pyldapsearch.__main__:app"
